Fix Java preview features flag for runtime